--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/connect-mongodb-session": "^2.4.4",
     "@types/express": "^4.17.17",
     "@types/express-handlebars": "^6.0.0",
+    "@types/express-session": "^1.17.7",
+    "bcrypt": "^5.1.1",
+    "connect-mongodb-session": "^3.1.1",
     "express": "^4.18.2",
-    "express-handlebars": "^7.1.2"
+    "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
+    "mongodb": "^5.7.0"
   }
 }
